--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -3,7 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.13.5",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,28 +20,22 @@
     "formik": "^2.4.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.7.1",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-pagination-control": "^1.0.5",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
-    "sweetalert2": "^11.7.12",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.2.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.13.5",
-    "@mui/styled-engine-sc": "^5.12.0",
-    "react-alice-carousel": "^2.7.1",
     "react-tuby": "^0.1.24",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.11",
-    "uuid": "^9.0.0"
+    "sweetalert2": "^11.7.12",
+    "uuid": "^9.0.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
