--- a/Front-End/.env
+++ b/Front-End/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_URL="http://localhost:8080/"
+REACT_APP_BASE_URL="https://project-seven-ashen.vercel.app/"
 REACT_APP_Dark="/movies/6480d1f16dac30a126565b6b"
